// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalShapeSize should match snapshots 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-base-control components-global-shape-size"
      >
        <div
          class="components-base-control components-range-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <div
              class="components-range-control__root css-2cg8er-Root exqw8y214"
            >
              <div
                class="components-range-control__wrapper css-2udiwk-Wrapper-wrapperColor-rangeHeight-wrapperMargin exqw8y213"
                color="var( --wp-admin-theme-color, #00669b)"
              >
                <input
                  aria-hidden="false"
                  class="components-range-control__slider css-12dovbr-InputRange exqw8y23"
                  id="inspector-range-control-0"
                  max="20"
                  min="0"
                  step="1"
                  tabindex="0"
                  type="range"
                  value="10"
                />
                <span
                  aria-hidden="true"
                  class="css-43abdt-Rail-railBackgroundColor exqw8y210"
                />
                <span
                  aria-hidden="true"
                  class="components-range-control__track css-1d41935-Track-trackBackgroundColor exqw8y29"
                  style="width: 50%;"
                />
                <span
                  class="css-11060oh-ThumbWrapper-thumbColor exqw8y25"
                  style="left: 50%;"
                >
                  <span
                    aria-hidden="true"
                    class="css-yd4y8u-Thumb-thumbColor exqw8y24"
                  />
                </span>
                <span
                  aria-hidden="false"
                  class="components-simple-tooltip components-range-control__tooltip css-1ct94j4-Tooltip-tooltipShow-tooltipPosition exqw8y22"
                  role="tooltip"
                  style="left: 50%; z-index: 100;"
                >
                  10
                </span>
              </div>
              <div
                class="components-flex components-input-control components-number-control components-range-control__number exqw8y21 ep48uk90 em5sgkm7 css-ep9ym1-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles-Input-InputNumber-rangeHeight em57xhy0"
                data-wp-c16t="true"
                data-wp-component="Flex"
              >
                <div
                  class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                  data-wp-c16t="true"
                  data-wp-component="FlexItem"
                />
                <div
                  class="components-input-control__container css-1sy20aj-Container-containerDisabledStyles-containerMarginStyles-containerWidthStyles em5sgkm6"
                >
                  <input
                    autocomplete="off"
                    class="components-input-control__input css-zq8abe-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                    id="inspector-input-control-0"
                    inputmode="decimal"
                    max="20"
                    min="0"
                    step="1"
                    type="number"
                    value="10"
                  />
                  <div
                    aria-hidden="true"
                    class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="components-button global-shape-size-reset is-small"
          type="button"
        >
          Reset
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-base-control components-global-shape-size"
    >
      <div
        class="components-base-control components-range-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <div
            class="components-range-control__root css-2cg8er-Root exqw8y214"
          >
            <div
              class="components-range-control__wrapper css-2udiwk-Wrapper-wrapperColor-rangeHeight-wrapperMargin exqw8y213"
              color="var( --wp-admin-theme-color, #00669b)"
            >
              <input
                aria-hidden="false"
                class="components-range-control__slider css-12dovbr-InputRange exqw8y23"
                id="inspector-range-control-0"
                max="20"
                min="0"
                step="1"
                tabindex="0"
                type="range"
                value="10"
              />
              <span
                aria-hidden="true"
                class="css-43abdt-Rail-railBackgroundColor exqw8y210"
              />
              <span
                aria-hidden="true"
                class="components-range-control__track css-1d41935-Track-trackBackgroundColor exqw8y29"
                style="width: 50%;"
              />
              <span
                class="css-11060oh-ThumbWrapper-thumbColor exqw8y25"
                style="left: 50%;"
              >
                <span
                  aria-hidden="true"
                  class="css-yd4y8u-Thumb-thumbColor exqw8y24"
                />
              </span>
              <span
                aria-hidden="false"
                class="components-simple-tooltip components-range-control__tooltip css-1ct94j4-Tooltip-tooltipShow-tooltipPosition exqw8y22"
                role="tooltip"
                style="left: 50%; z-index: 100;"
              >
                10
              </span>
            </div>
            <div
              class="components-flex components-input-control components-number-control components-range-control__number exqw8y21 ep48uk90 em5sgkm7 css-ep9ym1-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles-Input-InputNumber-rangeHeight em57xhy0"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              />
              <div
                class="components-input-control__container css-1sy20aj-Container-containerDisabledStyles-containerMarginStyles-containerWidthStyles em5sgkm6"
              >
                <input
                  autocomplete="off"
                  class="components-input-control__input css-zq8abe-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                  id="inspector-input-control-0"
                  inputmode="decimal"
                  max="20"
                  min="0"
                  step="1"
                  type="number"
                  value="10"
                />
                <div
                  aria-hidden="true"
                  class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="components-button global-shape-size-reset is-small"
        type="button"
      >
        Reset
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GlobalShapeSize should match snapshots 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-base-control components-global-shape-size"
      >
        <div
          class="components-base-control components-range-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <div
              class="components-range-control__root css-2cg8er-Root exqw8y214"
            >
              <div
                class="components-range-control__wrapper css-2udiwk-Wrapper-wrapperColor-rangeHeight-wrapperMargin exqw8y213"
                color="var( --wp-admin-theme-color, #00669b)"
              >
                <input
                  aria-hidden="false"
                  class="components-range-control__slider css-12dovbr-InputRange exqw8y23"
                  id="inspector-range-control-0"
                  max="20"
                  min="0"
                  step="1"
                  tabindex="0"
                  type="range"
                  value="10"
                />
                <span
                  aria-hidden="true"
                  class="css-43abdt-Rail-railBackgroundColor exqw8y210"
                />
                <span
                  aria-hidden="true"
                  class="components-range-control__track css-1d41935-Track-trackBackgroundColor exqw8y29"
                  style="width: 50%;"
                />
                <span
                  class="css-11060oh-ThumbWrapper-thumbColor exqw8y25"
                  style="left: 50%;"
                >
                  <span
                    aria-hidden="true"
                    class="css-yd4y8u-Thumb-thumbColor exqw8y24"
                  />
                </span>
                <span
                  aria-hidden="false"
                  class="components-simple-tooltip components-range-control__tooltip css-1ct94j4-Tooltip-tooltipShow-tooltipPosition exqw8y22"
                  role="tooltip"
                  style="left: 50%; z-index: 100;"
                >
                  10
                </span>
              </div>
              <div
                class="components-flex components-input-control components-number-control components-range-control__number exqw8y21 ep48uk90 em5sgkm7 css-ep9ym1-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles-Input-InputNumber-rangeHeight em57xhy0"
                data-wp-c16t="true"
                data-wp-component="Flex"
              >
                <div
                  class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                  data-wp-c16t="true"
                  data-wp-component="FlexItem"
                />
                <div
                  class="components-input-control__container css-1sy20aj-Container-containerDisabledStyles-containerMarginStyles-containerWidthStyles em5sgkm6"
                >
                  <input
                    autocomplete="off"
                    class="components-input-control__input css-zq8abe-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                    id="inspector-input-control-0"
                    inputmode="decimal"
                    max="20"
                    min="0"
                    step="1"
                    type="number"
                    value="10"
                  />
                  <div
                    aria-hidden="true"
                    class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="components-button global-shape-size-reset is-small"
          type="button"
        >
          Reset
        </button>
      </div>
    </div>
    <div>
      <div
        class="components-base-control components-global-shape-size"
      >
        <div
          class="components-base-control components-range-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <div
              class="components-range-control__root css-2cg8er-Root exqw8y214"
            >
              <div
                class="components-range-control__wrapper css-2udiwk-Wrapper-wrapperColor-rangeHeight-wrapperMargin exqw8y213"
                color="var( --wp-admin-theme-color, #00669b)"
              >
                <input
                  aria-hidden="false"
                  class="components-range-control__slider css-12dovbr-InputRange exqw8y23"
                  id="inspector-range-control-1"
                  max="20"
                  min="0"
                  step="1"
                  tabindex="0"
                  type="range"
                  value="4"
                />
                <span
                  aria-hidden="true"
                  class="css-43abdt-Rail-railBackgroundColor exqw8y210"
                />
                <span
                  aria-hidden="true"
                  class="components-range-control__track css-1d41935-Track-trackBackgroundColor exqw8y29"
                  style="width: 20%;"
                />
                <span
                  class="css-11060oh-ThumbWrapper-thumbColor exqw8y25"
                  style="left: 20%;"
                >
                  <span
                    aria-hidden="true"
                    class="css-yd4y8u-Thumb-thumbColor exqw8y24"
                  />
                </span>
                <span
                  aria-hidden="false"
                  class="components-simple-tooltip components-range-control__tooltip css-1ct94j4-Tooltip-tooltipShow-tooltipPosition exqw8y22"
                  role="tooltip"
                  style="left: 20%; z-index: 100;"
                >
                  4
                </span>
              </div>
              <div
                class="components-flex components-input-control components-number-control components-range-control__number exqw8y21 ep48uk90 em5sgkm7 css-ep9ym1-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles-Input-InputNumber-rangeHeight em57xhy0"
                data-wp-c16t="true"
                data-wp-component="Flex"
              >
                <div
                  class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                  data-wp-c16t="true"
                  data-wp-component="FlexItem"
                />
                <div
                  class="components-input-control__container css-1sy20aj-Container-containerDisabledStyles-containerMarginStyles-containerWidthStyles em5sgkm6"
                >
                  <input
                    autocomplete="off"
                    class="components-input-control__input css-zq8abe-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                    id="inspector-input-control-1"
                    inputmode="decimal"
                    max="20"
                    min="0"
                    step="1"
                    type="number"
                    value="4"
                  />
                  <div
                    aria-hidden="true"
                    class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="components-button global-shape-size-reset is-small"
          type="button"
        >
          Reset
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-base-control components-global-shape-size"
    >
      <div
        class="components-base-control components-range-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <div
            class="components-range-control__root css-2cg8er-Root exqw8y214"
          >
            <div
              class="components-range-control__wrapper css-2udiwk-Wrapper-wrapperColor-rangeHeight-wrapperMargin exqw8y213"
              color="var( --wp-admin-theme-color, #00669b)"
            >
              <input
                aria-hidden="false"
                class="components-range-control__slider css-12dovbr-InputRange exqw8y23"
                id="inspector-range-control-1"
                max="20"
                min="0"
                step="1"
                tabindex="0"
                type="range"
                value="4"
              />
              <span
                aria-hidden="true"
                class="css-43abdt-Rail-railBackgroundColor exqw8y210"
              />
              <span
                aria-hidden="true"
                class="components-range-control__track css-1d41935-Track-trackBackgroundColor exqw8y29"
                style="width: 20%;"
              />
              <span
                class="css-11060oh-ThumbWrapper-thumbColor exqw8y25"
                style="left: 20%;"
              >
                <span
                  aria-hidden="true"
                  class="css-yd4y8u-Thumb-thumbColor exqw8y24"
                />
              </span>
              <span
                aria-hidden="false"
                class="components-simple-tooltip components-range-control__tooltip css-1ct94j4-Tooltip-tooltipShow-tooltipPosition exqw8y22"
                role="tooltip"
                style="left: 20%; z-index: 100;"
              >
                4
              </span>
            </div>
            <div
              class="components-flex components-input-control components-number-control components-range-control__number exqw8y21 ep48uk90 em5sgkm7 css-ep9ym1-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles-Input-InputNumber-rangeHeight em57xhy0"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              />
              <div
                class="components-input-control__container css-1sy20aj-Container-containerDisabledStyles-containerMarginStyles-containerWidthStyles em5sgkm6"
              >
                <input
                  autocomplete="off"
                  class="components-input-control__input css-zq8abe-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                  id="inspector-input-control-1"
                  inputmode="decimal"
                  max="20"
                  min="0"
                  step="1"
                  type="number"
                  value="4"
                />
                <div
                  aria-hidden="true"
                  class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="components-button global-shape-size-reset is-small"
        type="button"
      >
        Reset
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
